--- a/sass/_try-today.scss
+++ b/sass/_try-today.scss
@@ -1,35 +1,64 @@
 .try-today {
+
+  /////@extendh
+  height: 420px;
+  margin: 0 auto;
+  margin-top: 80px;
   background: #999;
+  margin-bottom: 80px;
+  ////@extend
+
+  width: 86%;
   flex-direction: row;
   display: flex;
 
-  &__block {}
+  &__block {
+    min-width: 300px;
+    border: 1px solid red;
+  }
 
-  &__block-1 {}
+  &__block-1 {
+    height: 420px;
+    float: left;
+  }
 
-  &__block-2 {}
+  &__block-2 {
+    height: 192px;
+    float: right;
+  }
 
-  &__block-3 {}
+  &__block-3 {
+    height: 192px;
+    float: right;
+  }
 }
 
 .try-block {
-  border: 1px solid #000;
-  
+  position: relative;
   color: #ffffff;
+  height: 100%;
   text-transform: uppercase;
 
   &__pretitle {
+    margin-right: 40%;
     font-size: 2.5rem;
     line-height: 3.75rem;
   }
 
   &__title {
+    margin-right: 40%;
     font-size: 4.2rem;
     line-height: 5rem;
     font-weight: 700;
   }
 
-  &__image {}
+  &__image {
+    position: absolute;
+    top: 0; right: 0;
+    border: 1px solid #000;
+    height: 100%;
+    width: 40%;
+  }
   &__image-1 {}
   &__image-2 {}
   &__image-3 {}
@@ -39,16 +68,41 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ////////@extend
 .try-today {
 
-  &__block {}
+  &__block {
+  }
 
-  &__block-1 {}
+  &__block-1 {
 
-  &__block-2 {}
+  }
 
-  &__block-3 {}
+  &__block-2 {
+
+  }
+
+  &__block-3 {
+
+  }
 }
 
 .try-block {
