--- a/sass/_top-dishes.scss
+++ b/sass/_top-dishes.scss
@@ -1,9 +1,11 @@
 .top-dishes {
-  margin-top: 8rem;
+  padding-top: 8rem;
+  margin-bottom: 9rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  display: none;
 
   &__title {
     margin-bottom: 1rem;
