--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,2 +1,165 @@
 .footer {
+	background: url(/images/footer_bg.png) center right/cover no-repeat;
+	color: #fff;
+	
+	&-rows {
+		margin: 0 101px 0;
+	}
+
+	&__logo {
+		padding-top: 66px;
+		margin-bottom: 70px;
+
+		img {}
+	}
+
+	&__mid-row {
+		margin-bottom: 130px;
+		display: flex;
+		justify-content: space-between;
+		
+		font-size: 1.7rem;
+		line-height: 2.5rem;
+	}
+
+	&__mid-text {
+		width: 44%;
+	}
+
+	&__mid-right-side {
+		width: 35%;
+		display: flex;
+		flex-direction: column;
+	}
+
+	&__mid-placepoint {
+		padding-left: 65px;
+		margin-bottom: 15px;
+		line-height: 3.75rem;
+		font-weight: 500;
+		background: url(/images/icons/location_icon.png) center left/31px 35px no-repeat;
+	}
+
+	&__mid-mail {
+		padding-left: 65px;
+		background: url(/images/icons/email-icon.png) center left/29px 23px no-repeat;
+	}
+
+	&__end-row {
+		padding-bottom: 90px;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__end-copyright {
+		font-size: 1.7rem;
+	}
+
+	&__end-social-links {
+		a{
+			img {
+				width: 40px;
+				margin-left: 12px;
+			}
+		}
+	}
 }
+
+
+
+
+
+
+@media (max-width: 991.98px) {
+	.footer {
+
+		&-rows {
+			margin: 0 50px 0;
+		}
+
+		&__logo {
+			text-align: center;
+			padding-top: 50px;
+			margin: 0 0 50px 0;
+		}
+
+		&__mid-row {
+			margin-bottom: 85px;
+		}
+
+		&__mid-text {
+			width: 50%;
+		}
+
+		&__mid-right-side {
+			width: 40%;
+		}
+	
+		&__end-row {
+			padding-bottom: 40px;
+		}
+
+		&__end-social-links {
+			a{
+				img {
+					width: 56px;
+					margin-left: 16px;
+					margin-bottom: 16px;
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 767.98px) {
+
+	.footer{
+		&__mid-row {
+			flex-direction: column;
+			font-size: 2rem;			
+		}
+
+		&__mid-text {
+			width: 100%;
+			line-height: 3.6rem;
+			margin-bottom: 35px;
+		}
+
+		&__mid-right-side {
+			width: 100%;
+		}
+
+		&__end-row {
+			flex-direction: column;
+		}
+
+		&__end-copyright {
+			order: 2;
+		}
+
+		&__end-social-links {
+		a{
+			img {
+				margin-bottom: 40px;
+			}
+		}
+	}
+	}
+}
+
+@media (max-width: 575.98px) {
+	.footer {
+		&__logo {
+
+			img {
+				width: 280px;
+			}
+		}
+		
+		&-rows {
+			margin-left: 20px;
+			margin-right: 20px;
+		}
+	}
+}
+
