--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,6 @@ html {
    color: #000000;
 }
 
-
 @media (min-width: 1999.98px) {
    html {      font-size: 13px;   }
 }
@@ -45,4 +44,22 @@ html {
 
 @media (max-width: 575.98px) {
   
+}
+
+
+.ibg{
+   background-position: center;
+   background-size: cover;
+   background-repeat: no-repeat;
+   position: relative;
+}
+
+.ibg img{
+   width: 0;
+   height: 0;
+   position: absolute;
+   top: 0;
+   left: 0;
+   opacity: 0;
+   visibility: hidden;
 }
